Use the URI class instead of the URL class when resolving @import rules.  This avoids spurious exceptions due to missing protocol handlers when those protocols are handled by a custom user agent.